--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,11 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel  = "stylesheet"
+          type = "text/css"
+          href = "style.css" />
+    <style></style>
 </head>
 <body>
 
-<p> My project is a quick reference guide for people that don't know how to adult, but don't want to admit it.
-You can take a look down the full list of videos, or you can search by keyword, OR room in your house where you may need this skill.  :)</p>
+<h1>Adulting 101</h1>
+
+<h2><em>Deep Breath</em></h2>
+
+<p> Do you emotionally identify with memes that reference having a favorite stove top burner, or
+getting angry when the grocery store is rearranged?
+
+    If you answered yes, then you are most definitely an adult!
+
+What!?  You don't FEEL like an adult?  Neither do the rest of us, honey.
+
+When you are too embarrassed to admit to your parents or your friends that you can't complete the simple task of
+tying a tie, cooking a simple meal, or filling out your tax forms for your new job, LOOK NO FURTHER!
+
+This site is a a compilation of instructional videos that will help you complete the mundane tasks that are now your
+adult responsibilities.
+
+<ul>
+    <li><a href=>Kitchen</a></li>
+    <li><a href=>Bedroom</a></li>
+    <li><a href=>Bathroom</a></li>
+    <li><a href=>Garage</a></li>
+    <li><a href=>Work</a></li>
+    <li><a href=>Other</a></li>
+</ul>
 
 </body>
 </html>
